# rust_z2p

./: .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscription_confirm.rs  subscriptions.rs
tests/: health_check.rs  subcription.rs
tests/api/: common.rs  health_check.rs  main.rs  subscription.rs  subscription_confirm.rs
tests/common/: mod.rs
