[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.16"
serde = "1.0.134"
tokio = {versio="1.15.0", features=["macros", "rt-multi-thread"]}
config="0.11"


[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]


[dev-dependencies]
reqwest = "0.11"
