[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.21"
serde = "1.0.134"
serde-aux = "3"
tokio = {version="1.15.0", features=["macros", "rt-multi-thread"]}
config="0.11"
uuid = {version="0.8.2", features=["v4","serde"]}
chrono = "0.4.19"
tracing ={version="0.1",features=["log"]}
tracing-actix-web ="0.5.0-beta.7"
tracing-log ="0.1"
tracing-subscriber={version="0.3", features=["registry","env-filter"]}
tracing-bunyan-formatter="0.3"
secrecy={version="0.8",features=["serde"]}
unicode-segmentation="1"
validator={version = "0.14",features = ["derive"]}
reqwest = {version="0.11", default-features = false, features=["rustls","json"]}
rand = {version="0.8",features=["std_rng"]}


[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]


[dev-dependencies]

once_cell = "1"
claim = "0.5"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = {version="1",features=["rt","macros"]}
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"